# sgs2

./: README.md
plugins/device_control/: aero_command_info.json  image_receiver_info.json  joint_command_info.json  joy_receiver_info.json  js_receiver_info.json  mover_command_info.json  status_receiver_info.json
plugins/main_functions/: config_server_info.json  configurator_info.json  log_monitor_info.json  map_editor_info.json  map_server_info.json  motion_editor_info.json  motion_player_info.json  status_monitor_info.json  status_server_info.json  task_editor_info.json  task_player_info.json
plugins/main_functions/resources/configurator/data_info/: 251219_aero3_0001.json  251219_aero3_0002.json  251219_aero3_confing_setting_ Noid_Mover_v001.cfg  251219_aero3_confing_setting_Mover_v001.cfg  251219_aero3_confing_setting_Mover_v002.cfg  251219_aero3_confing_setting_Noid_Mover_v002.cfg
plugins/main_functions/resources/status_monitor/data_info/: ms1_status.json  ms2_status.json
plugins/map_editor_plugins/: keepout_tool_info.json  map_objects_info.json  map_tool_info.json  measure_tool_info.json  object_tool_info.json  robot_tool_info.json  waypoint_tool_info.json
plugins/sub_functions/: command_button_info.json  image_viewer_info.json  joint_controller_info.json  mover_controller_info.json  visualizer_info.json
plugins/task_editor_plugins/: body_controller_plugin_info.json  laser_sensing_plugin_info.json  map_changer_plugin_info.json  marker_detection_plugin_info.json  media_player_plugin_info.json  mover_controller_plugin_info.json  robot_state_plugin_info.json  script_controller_plugin_info.json  timer_plugin_info.json
plugins/task_editor_plugins/resources/body_controller_plugin/language/: lang_en.qm  lang_en.ts  lang_ja.ts
plugins/task_editor_plugins/resources/laser_sensing_plugin/language/: lang_en.qm  lang_en.ts  lang_ja.ts
plugins/task_editor_plugins/resources/map_changer_plugin/language/: lang_en.qm  lang_en.ts  lang_ja.ts
plugins/task_editor_plugins/resources/marker_detection_plugin/language/: lang_en.qm  lang_en.ts  lang_ja.ts
plugins/task_editor_plugins/resources/media_player_plugin/language/: lang_en.qm  lang_en.ts  lang_ja.ts
plugins/task_editor_plugins/resources/mover_controller_plugin/language/: lang_en.qm  (+2 more)
resources/language/: lang_en.ts  lang_ja.ts
resources/models/noid_lifter_mover/: CMakeLists.txt  README.md  package.xml
resources/models/noid_lifter_mover/config/: controller_settings.yaml  driver_settings.yaml  ompl_planning.yaml  realsense.yaml
resources/models/noid_lifter_mover/config/controllers/: controller_settings_joint_state.yaml  controller_settings_joint_trajectory.yaml  controller_settings_mechanum.yaml
resources/models/noid_lifter_mover/config/laser/: laser_filter.yaml
resources/models/noid_lifter_mover/config/navigation/: localization.yaml  navigation.yaml  slam_toolbox.yaml
resources/models/noid_lifter_mover/config/navigation/map/: gz_test_map.yaml  map.pgm
resources/models/noid_lifter_mover/config/teleop/: teleop_settings.yaml  teleop_settings_origin.yaml
resources/models/noid_lifter_mover/launch/: bringup_robot.launch.py
resources/models/noid_lifter_mover/launch/parts/: bringup_camera.launch.py  bringup_dummy_lidar.launch.py  bringup_moveit.launch.py  bringup_navigation.launch.py  bringup_robot_model.launch.py  localization.launch.py  navigation.launch.py  slam_toolbox.launch.py
resources/models/noid_lifter_mover/model/: noid_lifter_mover.ros2_control.xacro  noid_lifter_mover.urdf.xacro
resources/models/noid_lifter_mover/model/parts/: xacro_common.xacro
resources/models/noid_lifter_mover/model/parts/trx_s/: trx_s.xacro
resources/models/noid_lifter_mover/model/parts/typeg_body/: typeg_body.xacro
resources/models/noid_lifter_mover/model/parts/typeg_larm/: typeg_larm.xacro
resources/models/noid_lifter_mover/model/parts/typeg_lifter/: typeg_lifter.xacro
resources/models/noid_lifter_mover/model/parts/typeg_mover/: typeg_mover.xacro
resources/models/noid_lifter_mover/model/parts/typeg_rarm/: typeg_rarm.xacro
resources/models/noid_lifter_mover/moveit/config/: SEED-Noid-Lifter-Mover-typeG.srdf  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
resources/models/noid_lifter_mover/rviz/: rviz.rviz  rviz_base.rviz
resources/models/noid_lifter_mover/src/: amcl_state_monitor_node.cpp  bringup_moveit_monitor_node.cpp  bringup_navigation_monitor_node.cpp  bringup_rviz2_monitor_node.cpp  controllers_state_monitor_node.cpp  save_map_client_node.cpp  tf_static_monitor_node.cpp  tf_static_ready_monitor_node.cpp
resources/models/noid_lifter_mover/stroke_converter/: plugin_description.xml
resources/models/noid_lifter_mover/stroke_converter/src/: stroke_converter.cpp  stroke_converter.h
resources/rsync/: rsyncd.conf
resources/ui/: default_theme.qss  resources.qrc
(+20 files in other folders)
