<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noid_lifter_mover</name>
  <version>0.0.0</version>
  <description>noid_lifter_mover</description>
  <maintainer email="thk@dummy.com">thk</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>seed_ros2_controller</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
